add du flag --done