@@ -6,11 +6,11 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.node.ArrayNode;
 import com.fasterxml.jackson.databind.node.JsonNodeFactory;
 import com.fasterxml.jackson.databind.node.MissingNode;
+import com.fasterxml.jackson.databind.node.ObjectNode;
 
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Arrays;
 import java.util.stream.Collectors;
 
@@ -19,13 +19,12 @@ public class TodoFileHandler {
     private String fileContent;
 
     public TodoFileHandler(String fileName) throws IOException {
-        this.filePath = Paths.get(fileName);
+        this.filePath = Path.of(fileName);
         this.fileContent = Files.exists(filePath) ? Files.readString(filePath) : "";
     }
 
     public void insertTodo(String todo) throws IOException {
         if (filePath.toString().endsWith(".json")) {
-            // Gestion des TODOS JSON
             ObjectMapper mapper = new ObjectMapper();
             JsonNode actualObj = mapper.readTree(fileContent);
             if (actualObj instanceof MissingNode) {
@@ -33,17 +32,16 @@ public class TodoFileHandler {
             }
 
             if (actualObj instanceof ArrayNode arrayNode) {
-                arrayNode.add(todo);
+                ObjectNode todoNode = mapper.createObjectNode();
+                todoNode.put("todo", todo);
+                boolean isDone = true;
+                todoNode.put("done", isDone);
+                arrayNode.add(todoNode);
             }
 
             Files.writeString(filePath, actualObj.toString());
-        } else if (filePath.toString().endsWith(".csv")) {
-            // Gestion des TODOS CSV
-            if (!fileContent.endsWith("\n") && !fileContent.isEmpty()) {
-                fileContent += "\n";
-            }
-            fileContent += todo;
-            Files.writeString(filePath, fileContent);
+        } else {
+            System.err.println("Unsupported file format for inserting todos");
         }
     }
 
@@ -65,6 +63,25 @@ public class TodoFileHandler {
                     .map(todo -> "- " + todo)
                     .collect(Collectors.joining("\n"))
             );
+        }
+    }
+    public void listDoneTodos() throws IOException {
+        if (filePath.toString().endsWith(".json")) {
+            ObjectMapper mapper = new ObjectMapper();
+            JsonNode actualObj = mapper.readTree(fileContent);
+            if (actualObj instanceof MissingNode) {
+                actualObj = JsonNodeFactory.instance.arrayNode();
+            }
+
+            if (actualObj instanceof ArrayNode arrayNode) {
+                arrayNode.forEach(node -> {
+                    if (node.has("done") && node.get("done").asBoolean()) {
+                        System.out.println("- " + node.toString());
+                    }
+                });
+            }
+        } else {
+            System.err.println("Unsupported file format for listing done todos");
         }
     }
 }
